--- a/Codigos/style.css
+++ b/Codigos/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans&family=Inria+Serif&display=swap');
 
+:root{
+    --quase-preto: #0d0b2c;
+    --chumbo: #494951;
+    --fundo: #040821;
+    --rosa: #cb51f9;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -7,8 +14,14 @@
     border: 0;
 }
 
+.active, .active a{
+    background: white;
+    color: black;  
+    padding: 5px;
+}
+
 body{
-    background-color: #0d0b2c;
+    background-color: var(--quase-preto);
 }
 
 .principal{
@@ -16,42 +29,42 @@ body{
     margin-left: auto;
     margin-right: auto;
     font-family:'Inria Sans', 'sans-serif';
-    color: #FFFFFF;
+    color: white;
 }
 
 .capa{
     width: 1440px;
     height: 210px;
-    background: url(imagens/Capa.png)  #494951;
+    background: url(imagens/Capa.png)  var(--chumbo);
+}
+
+.corpo{
+    width: 1200px;
+    margin:auto;
+    height: 538px;
+}
+
+.container, .container address{
+    margin-top: 1rem;
+    text-align: justify;
 }
 
 .menu{
-    width: 1440px;
+    align-items: center;
+    display: flex;
     height: 62px;
-    background: #040821;
-}
-.menu ul{
-    margin-left: 120px;
-    list-style: none;
-}
-.menu ul li{
-    display: inline-block;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    padding: 17px;
+    justify-content: space-evenly;
+    background: var(--fundo);
 }
 
-.menu ul li a{
+.menu a:not(.active){
+    color: white;
     text-decoration: none;
-    color: #FFFFFF;
 }
 
-.menu ul li a:hover{
+.menu a:hover{
     color:#040821;
-    background: #FFFFFF;
+    background: white;
     padding: 5px;
 }
 
@@ -62,6 +75,10 @@ body{
     bottom: 330px;
     right: 1048px;
     float: left;
+}
+
+.sobre-if{
+    margin-top: 1rem;
 }
 
 .texto{
@@ -98,13 +115,9 @@ text-align: center;
 }
 
 .texto ol li a:hover, .texto ul li a:hover{
-    color: #cb51f9;
+    color: var(--rosa);
 }
-.corpo{
-    width: 1200px;
-    margin:auto;
-    height: 538px;
-}
+
 
 #hobbies{
     margin-top: 20px;
@@ -120,12 +133,10 @@ text-align: center;
 
 .flutuar div{
     text-align: center;
-
 }
 
 
 footer{
-    clear: both;
     text-align: center;
 }
 
@@ -148,11 +159,4 @@ tr th,tr td{
     border: 1px solid white;
     padding: 5px;
 }
-
-#rodape-curso{
-    position: relative;
-    top: 550px;
-    margin-bottom: 20px;
-}
-
 
